# agent_city

simple-rag/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api.py  constants.py  docker-compose.yml  main.py  pyproject.toml
simple-rag/agents/simple_rag/: agent.md  agent.py
simple-rag/evals/: dataset.json
simple-rag/rag/: agent.md  agent.py
simple-rag/retriever/: doc_processor.py  indexer.py  models.py
simple-react-agent/: .env.example  .gitignore  README.md  langgraph.json  main.py  pyproject.toml
simple-react-agent/agents/simple_react/: agent.py
